<?xml version="1.0" encoding="utf-8"?>
<!-- en -->
<resources>
    <string name="title_app_name">Sequence Hunt</string>
    <string name="title_welcome">Welcome to Sequence Hunt!</string>
    <string name="title_how_to_play">Instructions for Game Play</string>
    <string name="title_history">History</string>
    <string name="title_license">License</string>
    <string name="title_setup">Level of Difficulty</string>
    <string name="title_sound_setup">Sound</string>
    <string name="message_welcome_initial">\nThank you for installing Sequence Hunt.\n</string>
    <string name="message_welcome_what_is_new">Thank you Nicolas Patzelt for improving the German translations used in the game.\n</string>
    <string name="message_welcome_ending">If you have any issues with the game\'s operation or suggestions for improvements please do not hesitate to contact me (David Read, David.Read@monead.com).  Contact information also found using the \'About\' menu.\n\nInstructions may be viewed at any time by bringing up the game\'s menu and selecting the \'How to Play\' option.\n\nWould you like to begin playing or read the instructions?\n\n</string>
    <string name="message_about">David Read\nDavid.Read@monead.com\nwww.monead.com\n\nThe source code is located at: https://github.com/DaveRead/SequenceHunt\n\nThis program is free software released under the GNU Affero General Public License.  See the License menu option for the full license.</string> 
    <string name="message_undefined">undefined</string>
    <string name="message_win">Congratulations!  You Won!</string>
    <string name="message_lose">Sorry, you lost!</string>
    <string name="message_playing_time">Playing time: %s</string>
    <string name="message_pattern_was">The pattern was</string>
    <string name="question_play_again">Play again?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_copy_to_clipboard">Copy to Clipboard</string>
    <string name="button_play">Play</string>
    <string name="button_read_instructions">Read Instructions</string>
    <string name="color_black">Black</string>
    <string name="color_blue">Blue</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_white">White</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_unknown">Unknown</string>
    <string name="key_black">K</string>
    <string name="key_blue">B</string>
    <string name="key_green">G</string>
    <string name="key_red">R</string>
    <string name="key_white">W</string>
    <string name="key_yellow">Y</string>
    <string name="radiobutton_easy">Easy</string>
    <string name="radiobutton_hard">Hard</string>
    <string name="radiobutton_sound_on">On</string>
    <string name="radiobutton_sound_off">Off</string>
    <string name="menu_how_to_play">How to Play</string>
    <string name="menu_setup">Configure</string>
    <string name="menu_new_game">New Game</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_about">About</string>
    <string name="menu_license">License</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_history">History</string>
    <string name="menu_debug">Debug Info</string>
    <string name="label_version">Version</string>
    <string name="label_stats_title">Game Statistics</string>
    <string name="label_stats_error">Error Computing Statistics\nMessage Returned</string>
    <string name="label_stats_colors">Color Choices\n(checking randomness)</string>
    <string name="label_stats_num_games">Total Games</string>
    <string name="label_stats_num_won">Games Won</string>
    <string name="label_stats_num_lost">Games Lost</string>
    <string name="label_stats_num_quit">Games Quit</string>
    <string name="label_stats_num_easy">Easy Games</string>
    <string name="label_stats_num_hard">Hard Games</string>
    <string name="label_stats_avg_tries_per_game">Average Tries/Game</string>
    <string name="label_stats_avg_time_per_game_won">Average Time/Games Won</string>
    <string name="label_stats_avg_time_per_game_lost">Average Time/Games Lost</string>
    <string name="label_stats_total_tries">Total Tries</string>
    <string name="label_stats_total_time_games_won">Total Time on Games Won</string>
    <string name="label_stats_total_time_games_lost">Total Time on Games Lost</string>
    <string name="label_runtime_information">Runtime Information</string>
    <string name="label_sequence_length">Sequence Length</string>
    <string name="message_report_program_and_version_names">Retrieved program name and version name</string>
    <string name="errormessage_program_or_version_name">Unable to retrieve program name or version name</string>
    <string name="errormessage_model_read_failed">Failed to load model</string>
    <string name="errormessage_model_write_failed">Failed to write model</string>
    <string name="errormessage_model_input_file_close_failed">Failed to close input model file</string>
    <string name="errormessage_model_output_file_close_failed">Failed to close output model file</string>
    <string name="errormessage_stats_read_failed">Failed to load game statistics</string>
    <string name="errormessage_stats_write_failed">Failed to write game statistics</string>
    <string name="errormessage_stats_input_file_close_failed">Failed to close input game statistics file</string>
    <string name="errormessage_stats_output_file_close_failed">Failed to close output game statistics file</string>
</resources>
