<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" >
	<TextView android:id="@+id/label" 
    		android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:textColor="#c0c0ff"
            android:textSize="20sp"
            android:textStyle="bold" 
            android:text="@string/title_setup" />
            
    <RadioGroup android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:orientation="vertical">
		<RadioButton android:id="@+id/radio_easy"
        		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"
          		android:text="@string/radiobutton_easy" />
      	<RadioButton android:id="@+id/radio_hard"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"
          		android:text="@string/radiobutton_hard" />
	</RadioGroup>

	<TextView android:id="@+id/label" 
    		android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:textColor="#c0c0ff"
            android:textSize="20sp"
            android:textStyle="bold" 
            android:text="@string/title_sound_setup" />
    <RadioGroup android:layout_width="fill_parent"
      		android:layout_height="wrap_content"
      		android:orientation="vertical">
		<RadioButton android:id="@+id/sound_on"
        		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"
          		android:text="@string/radiobutton_sound_on" />
      	<RadioButton android:id="@+id/sound_off"
          		android:layout_width="wrap_content"
          		android:layout_height="wrap_content"
          		android:text="@string/radiobutton_sound_off" />
	</RadioGroup>
	
	<TextView android:id="@+id/label" 
    		android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:textColor="#c0c0ff"
            android:textSize="20sp"
            android:textStyle="bold" 
            android:text="@string/label_sequence_length" />	
    <Spinner android:id="@+id/spinner_sequence_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/label_sequence_length" />       

  	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content" >
	    <TextView android:id="@+id/labelSPacer" 
    			android:layout_width="wrap_content" 
            	android:layout_height="wrap_content"
            	android:text="" />
  	</LinearLayout>

  	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent" >
    	<Button android:id="@+id/button_save"
         		android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/button_save" />
    	<Button android:id="@+id/button_cancel"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/button_cancel" />       
  	</LinearLayout>
</LinearLayout>