<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome"
        android:textColor="#c0c0ff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dip"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/welcome_message_initial"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_welcome_initial"
                android:textColor="#ffffc0"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/welcome_message_what_is_new"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_welcome_what_is_new"
                android:textColor="#c0ffc0"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/welcome_message_ending"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_welcome_ending" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dip"
        android:gravity="bottom" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_play" />

            <Button
                android:id="@+id/button_read_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_read_instructions" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>